--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 </head>
 <body>
     <header>
-        <headers>Where to go while going to Flatiron School</headers>
+        <h1>Where to go when going to Flatiron School</h1>
         <img class = "logo" src = "./assets/Denver_Logo.jpg"/>
-
         <nav id="denver-list">
+            <ul>
+                <li><a href="#Food">Food</a></li>
+                <li><a href="#Entertainment">Entertainment</a></li>
+                <li><a href="#Nature">Nature</a></li>
+            </ul>
         </nav>
     </header>
-
     <div id="category-info">
         <img id = "category-image" src = "" />
         <div>
