added hard coded categories and images

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Where to go while going to Flatiron School</title>
     <link rel="stylesheet" type="text/css" href="./style.css" />
-    <script defer src="src/index.js"></script>
+    <script defer src="index.js"></script>
 </head>
 <body>
     <header>
@@ -24,11 +24,10 @@
         <div>
             <h1 id = "name">Name </h1>
             <h2 id = "category">Category</h2>
-            <img id = "locImage"> src = ""/>
+            <img id = "locImage">
             <p id = "description">Description</p>
         </div>
     </div>
-
 
     <section id="comment">
         <h2>Did we miss a great spot? ...  Let us know and it could be added to the list!</h2>
