committing final project

--- a/index.html
+++ b/index.html
@@ -36,18 +36,21 @@
                 <li><a href="#Nature">Nature</a></li>
             </ul>
         </nav> -->
+        <nav id="denver-list">            
+        </nav>
     </header>
     <div id="category-info">
         <img id="category-image" src = ""/>
-        <div>
-            <h2 id="name">Name </h2>
+            <h3 class="category"></h3>
+        <div class="mouseoverName"></div>
+        <div class="mouseoutName"></div>
+            <h2 id="h2name"></h2>
             <img id="locImage"  src = ""/>
             <p id="description"></p>
-        </div>
     </div>
 
     <section id="comment">
-        <h2>Did we miss a great spot? ...  Let us know and it could be added to the list!</h2>
+        <h4>Did we miss a great spot? ...  Let us know and it could be added to the list!</h4>
         <form class="suggestions">
             <label for="name">Name of tourist destination:</label>
             <textarea type="text" id="name" name="name" required></textarea>
@@ -66,10 +69,12 @@
             <input type="submit" value="Submit">
         </form>
 
+        <footer>
+            <p>&copy; 2023 Gunnar/SherinaPhase1Project. All rights reserved.</p>
+        </footer>
+
     </section>
 
-    <footer>
-        <p>&copy; 2023 Gunnar/SherinaPhase1Project. All rights reserved.</p>
-    </footer>
+
 </body>
 </html>
