--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
     <div id="category-info">
         <img id="category-image" src = ""/>
             <h3 class="category"></h3>
-        <div class="mouseoverName"></div>
-        <div class="mouseoutName"></div>
             <h2 id="h2name"></h2>
             <img id="locImage"  src = ""/>
             <p id="description"></p>
@@ -52,11 +50,11 @@
     <section id="comment">
         <h4>Did we miss a great spot? ...  Let us know and it could be added to the list!</h4>
         <form class="suggestions">
-            <label for="name">Name of tourist destination:</label>
-            <textarea type="text" id="name" name="name" required></textarea>
+            <label for="name">Name of location:</label>
+            <textarea type="text" name="name" required></textarea>
 
-            <label for="location">Location:</label>
-            <textarea type="location" id="location" name="location" required></textarea>
+            <label for="description">Description:</label>
+            <textarea type="description" name="location" required></textarea>
 
             <label for="Comment">Personal experience that made this a great spot:</label>
             <textarea id="message" name="message" required></textarea>
